fix cors: use allowedOriginPatterns